<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_personal"
            android:title="@string/strHeaderPersonal" />
        <item
            android:id="@+id/nav_home"
            android:title="@string/strHeaderHomePage" />
        <item
            android:id="@+id/nav_search"
            android:title="@string/strHeaderSearch" />
        <item
            android:id="@+id/nav_playlist"
            android:title="@string/strHeaderPlaylist" />
    </group>
    <item android:title="@string/strHeaderAccount">
        <menu>
            <item
                android:id="@+id/nav_myprofile"
                android:title="@string/strContentMyProfile" />
            <item
                android:id="@+id/nav_changepassword"
                android:title="@string/strContentChangePassword" />
            <item
                android:id="@+id/nav_signout"
                android:title="@string/strContentSignout" />
        </menu>
    </item>
</menu>